--- a/ML/cnn/asl-project/ASL_Detection/1_Image_Collection.ipynb
+++ b/ML/cnn/asl-project/ASL_Detection/1_Image_Collection.ipynb
@@ -16,8 +16,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: opencv-python in d:\\youtube\\od\\tfodcourse\\tfod\\lib\\site-packages (4.5.1.48)\n",
-      "Requirement already satisfied: numpy>=1.14.5 in d:\\youtube\\od\\tfodcourse\\tfod\\lib\\site-packages (from opencv-python) (1.20.2)\n"
+      "Collecting opencv-python\n",
+      "  Using cached opencv_python-4.7.0.72-cp37-abi3-macosx_10_16_x86_64.whl (53.9 MB)\n",
+      "Collecting numpy>=1.17.3\n",
+      "  Using cached numpy-1.24.2-cp39-cp39-macosx_10_9_x86_64.whl (19.8 MB)\n",
+      "Installing collected packages: numpy, opencv-python\n",
+      "Successfully installed numpy-1.24.2 opencv-python-4.7.0.72\n"
      ]
     }
    ],
@@ -27,20 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import opencv\n",
     "import cv2 \n",
     "\n",
-    "# Import uuid\n",
+    "# Import uuid -- uniquely labels images after capturing\n",
     "import uuid\n",
     "\n",
     "# Import Operating System\n",
     "import os\n",
     "\n",
-    "# Import time\n",
+    "# Import time -- 2 second intervals between capturing each label\n",
     "import time"
    ]
   },
@@ -53,12 +57,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "B\n",
+      "C\n",
+      "D\n",
+      "E\n",
+      "F\n",
+      "G\n",
+      "H\n",
+      "I\n",
+      "J\n",
+      "K\n",
+      "L\n",
+      "M\n",
+      "N\n",
+      "O\n",
+      "P\n",
+      "Q\n",
+      "R\n",
+      "S\n",
+      "T\n",
+      "U\n",
+      "V\n",
+      "W\n",
+      "X\n",
+      "Y\n",
+      "Z\n",
+      "nothing\n",
+      "space\n",
+      "delete\n"
+     ]
+    }
+   ],
    "source": [
-    "labels = ['thumbsup', 'thumbsdown', 'thankyou', 'livelong']\n",
-    "number_imgs = 5"
+    "labels = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V',\n",
+    "         'W', 'X', 'Y', 'Z', 'nothing', 'space', 'delete']\n",
+    "number_imgs = 10"
    ]
   },
   {
@@ -70,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,14 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make folders \n",
     "if not os.path.exists(IMAGES_PATH):\n",
-    "    if os.name == 'posix':\n",
+    "    if os.name == 'posix': # UNIX OS\n",
     "        !mkdir -p {IMAGES_PATH}\n",
-    "    if os.name == 'nt':\n",
+    "    if os.name == 'nt':    # Windows OS\n",
     "         !mkdir {IMAGES_PATH}\n",
     "for label in labels:\n",
     "    path = os.path.join(IMAGES_PATH, label)\n",
@@ -103,22 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting images for thumbsup\n",
-      "Collecting image 0\n",
-      "Collecting image 1\n",
-      "Collecting image 2\n",
-      "Collecting image 3\n",
-      "Collecting image 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for label in labels:\n",
     "    cap = cv2.VideoCapture(0)\n",
@@ -134,6 +163,76 @@
     "\n",
     "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "            break\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting images for G\n",
+      "Collecting image 0\n",
+      "Collecting image 1\n",
+      "Collecting image 2\n",
+      "Collecting image 3\n",
+      "Collecting image 4\n",
+      "Collecting image 5\n",
+      "Collecting image 6\n",
+      "Collecting images for P\n",
+      "Collecting image 0\n",
+      "Collecting image 1\n",
+      "Collecting image 2\n",
+      "Collecting image 3\n",
+      "Collecting image 4\n",
+      "Collecting image 5\n",
+      "Collecting image 6\n",
+      "Collecting images for U\n",
+      "Collecting image 0\n",
+      "Collecting image 1\n",
+      "Collecting image 2\n",
+      "Collecting image 3\n",
+      "Collecting image 4\n",
+      "Collecting image 5\n",
+      "Collecting image 6\n",
+      "Collecting images for X\n",
+      "Collecting image 0\n",
+      "Collecting image 1\n",
+      "Collecting image 2\n",
+      "Collecting image 3\n",
+      "Collecting image 4\n",
+      "Collecting image 5\n",
+      "Collecting image 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Collect more images for G + 1, P + 7, U + 1, X + 2\n",
+    "# G labels[6]\n",
+    "# P labels[15]\n",
+    "# U labels[20]\n",
+    "# X labels[23]\n",
+    "for label in labels:\n",
+    "    if label == 'G' or label == 'P' or label == 'U' or label == 'X':\n",
+    "        cap = cv2.VideoCapture(0)\n",
+    "        print('Collecting images for {}'.format(label))\n",
+    "        time.sleep(5)\n",
+    "        for imgnum in range(7):\n",
+    "            print('Collecting image {}'.format(imgnum))\n",
+    "            ret, frame = cap.read()\n",
+    "            imgname = os.path.join(IMAGES_PATH,label,label+'.'+'{}.jpg'.format(str(uuid.uuid1())))\n",
+    "            cv2.imwrite(imgname, frame)\n",
+    "            cv2.imshow('frame', frame)\n",
+    "            time.sleep(2)\n",
+    "\n",
+    "            if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "                break\n",
+    "            \n",
     "cap.release()\n",
     "cv2.destroyAllWindows()"
    ]
