moved images to test/ and train/

--- a/ML/cnn/asl-project/ASL_Detection/1_Image_Collection.ipynb
+++ b/ML/cnn/asl-project/ASL_Detection/1_Image_Collection.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,8 @@
       "Image:/Users/olivia/Dropbox/Coding/Python/ML/cnn/asl-project/ASL_Detection/Tensorflow/workspace/images/collectedimages/A/A.9df56f7e-c9bb-11ed-8229-38f9d362366a.jpg -> Annotation:/Users/olivia/Dropbox/Coding/Python/ML/cnn/asl-project/ASL_Detection/Tensorflow/workspace/images/collectedimages/A/A.9df56f7e-c9bb-11ed-8229-38f9d362366a.xml\n",
       "Image:/Users/olivia/Dropbox/Coding/Python/ML/cnn/asl-project/ASL_Detection/Tensorflow/workspace/images/collectedimages/A/A.9f2d4ede-c9bb-11ed-8229-38f9d362366a.jpg -> Annotation:/Users/olivia/Dropbox/Coding/Python/ML/cnn/asl-project/ASL_Detection/Tensorflow/workspace/images/collectedimages/A/A.9f2d4ede-c9bb-11ed-8229-38f9d362366a.xml\n",
       "Image:/Users/olivia/Dropbox/Coding/Python/ML/cnn/asl-project/ASL_Detection/Tensorflow/workspace/images/collectedimages/A/A.048fab3c-c9bc-11ed-8ceb-38f9d362366a.jpg -> Annotation:/Users/olivia/Dropbox/Coding/Python/ML/cnn/asl-project/ASL_Detection/Tensorflow/workspace/images/collectedimages/A/A.048fab3c-c9bc-11ed-8ceb-38f9d362366a.xml\n",
-      "Image:/Users/olivia/Dropbox/Coding/Python/ML/cnn/asl-project/ASL_Detection/Tensorflow/workspace/images/collectedimages/A/A.083ad0e0-c9bc-11ed-8ceb-38f9d362366a.jpg -> Annotation:/Users/olivia/Dropbox/Coding/Python/ML/cnn/asl-project/ASL_Detection/Tensorflow/workspace/images/collectedimages/A/A.083ad0e0-c9bc-11ed-8ceb-38f9d362366a.xml\n"
+      "Image:/Users/olivia/Dropbox/Coding/Python/ML/cnn/asl-project/ASL_Detection/Tensorflow/workspace/images/collectedimages/A/A.083ad0e0-c9bc-11ed-8ceb-38f9d362366a.jpg -> Annotation:/Users/olivia/Dropbox/Coding/Python/ML/cnn/asl-project/ASL_Detection/Tensorflow/workspace/images/collectedimages/A/A.083ad0e0-c9bc-11ed-8ceb-38f9d362366a.xml\n",
+      "Image:/Users/olivia/Dropbox/Coding/Python/ML/cnn/asl-project/ASL_Detection/Tensorflow/workspace/images/collectedimages/A/A.0357e1d0-c9bc-11ed-8ceb-38f9d362366a.jpg -> Annotation:/Users/olivia/Dropbox/Coding/Python/ML/cnn/asl-project/ASL_Detection/Tensorflow/workspace/images/collectedimages/A/A.0357e1d0-c9bc-11ed-8ceb-38f9d362366a.xml\n"
      ]
     }
    ],
